# OOP_lab7

./: README.md
tasks/lab06/: .gitignore  CMakeLists.txt
tasks/lab06/include/: BattleVisitor.h  Bull.h  Dragon.h  Editor.h  Frog.h  NPC.h  NPCFactory.h  Observer.h
tasks/lab06/src/: BattleVisitor.cpp  Bull.cpp  Dragon.cpp  Editor.cpp  Frog.cpp  NPC.cpp  NPCFactory.cpp  Observer.cpp  main.cpp
tasks/lab06/tests/: test_main.cpp
tasks/lab6/: CHANGES.md  CMakeLists.txt  README.md  main.cpp
tasks/lab6/include/: arena.h  bull.h  character.h  combat_visitor.h  console_observer.h  creatures.h  dragon.h  factory.h  file_observer.h  frog.h  game_world.h  npc.h  observer.h  patterns.h  visitor.h
tasks/lab6/src/: arena.cpp  bull.cpp  character.cpp  combat_visitor.cpp  creatures.cpp  dragon.cpp  factory.cpp  frog.cpp  game_world.cpp  npc.cpp  patterns.cpp
tasks/lab6/tests/: test.cpp  tests.cpp
tasks/lab7/: CMakeLists.txt  main.cpp
tasks/lab7/include/: BattleVisitor.h  GameWorld.h  NPC.h  NPCFactory.h  NPCTypes.h  Observer.h  Point.h
tasks/lab7/src/: BattleVisitor.cpp  GameWorld.cpp  NPC.cpp  NPCFactory.cpp  NPCTypes.cpp  Observer.cpp
tasks/lab7/tests/: test_lab07.cpp
